# Nightglow

./: .gitignore  .gitlab-ci.yml  README.md  SPEC.md  package.json  tsconfig.json
browser/: SPEC.md  index.ts
browser/artifacts/: index.ts
browser/artifacts/storage/: index.ts  storage.ts
browser/cli/: cli.ts  index.ts
browser/config/: config.ts  index.ts
browser/dsl/: index.ts  parser.ts  types.ts
browser/engine/: index.ts
browser/engine/reconciler/: index.ts  reconciler.ts  states.ts
browser/engine/scheduler/: index.ts  scheduler.ts
browser/executor/: index.ts
browser/observability/: index.ts  logger.ts
browser/policy/: index.ts  policy.ts
config/: .env.example  default.ts  grafana-datasources.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml
doc/: fingerprint-categories.md  profile-system.md
operator/: Dockerfile  Makefile  go.mod
operator/controllers/: automationtask_controller.go  browserlesspool_controller.go  browsersession_controller.go
servo/: .gitlab-ci.yml  CI.md  Cargo.toml  Dockerfile
servo/components/nightglow/: Cargo.toml
servo/components/nightglow/src/: lib.rs
servo/components/nightglow/src/profiles/: fingerprint.rs  mod.rs  pool.rs
servo/components/nightglow/src/resource_tree/: mod.rs
servo/components/nightglow/src/telemetry/: mod.rs
src/: index.ts  nightglow.ts
src/embedder/: embedder.ts  index.ts
src/instruments/: factory.ts  index.ts  registry.ts  templates.ts
src/kafka/: consumer.ts  index.ts  producer.ts  topics.ts
src/observability/: index.ts  metrics.ts  tracer.ts
src/types/: index.ts
(+26 files in other folders)
